objects/Time_Tracker__c/Time_Tracker__c.object-meta.xml
<CustomObject>
    <description>SS-8643 Custom object to allow TAM to track time for various activities</description>
    <label>DEPRECATED - Time Tracker</label>
    <nameField>
        <displayFormat>TT-{0000}</displayFormat>
        <label>Time Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>