objects/Time_Tracker__c/fields/Created_Year_Text__c.field-meta.xml
<CustomField>
    <fullName>Created_Year_Text__c</fullName>
    <description>Created Year Formula</description>
    <formula>TEXT(YEAR(DATEVALUE(CreatedDate)))</formula>
    <label>DEPRECATED - Created Year Text</label>
    <type>Text</type>
</CustomField>