objects/Time_Tracker__c/fields/Customer_Success__c.field-meta.xml
<CustomField>
    <fullName>Customer_Success__c</fullName>
    <label>DEPRECATED - Customer Success</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>