objects/Time_Tracker__c/fields/Last_Modified_Month_Text__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Month_Text__c</fullName>
    <description>Last Modified Month Text</description>
    <formula>TEXT(MONTH(DATEVALUE(LastModifiedDate)))</formula>
    <label>DEPRECATED - Last Modified Month Text</label>
    <type>Text</type>
</CustomField>