objects/Time_Tracker__c/fields/Last_Modified_Year_Text__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Year_Text__c</fullName>
    <description>Last Modified Year Text</description>
    <formula>TEXT(YEAR(DATEVALUE(LastModifiedDate)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DEPRECATED -  Modified Year Text</label>
    <type>Text</type>
</CustomField>