objects/Time_Tracker__c/fields/Month_Formula__c.field-meta.xml
<CustomField>
    <fullName>Month_Formula__c</fullName>
    <formula>TEXT(Month__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DEPRECATED - Month Formula</label>
    <type>Text</type>
</CustomField>