objects/Time_Tracker__c/fields/Presales__c.field-meta.xml
<CustomField>
    <fullName>Presales__c</fullName>
    <label>DEPRECATED - Presales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>