objects/Time_Tracker__c/fields/R_D__c.field-meta.xml
<CustomField>
    <fullName>R_D__c</fullName>
    <label>DEPRECATED - R&amp;D</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>