objects/Time_Tracker__c/fields/Support__c.field-meta.xml
<CustomField>
    <fullName>Support__c</fullName>
    <label>DEPRECATED - Support</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>