objects/Time_Tracker__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <description>The Year of the Time Tracker record.</description>
    <inlineHelpText>The Year of the Time Tracker record.</inlineHelpText>
    <label>DEPRECATED - Year</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2024</fullName>
            </value>
            <value>
                <fullName>2025</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>