objects/Time_Tracker__c/validationRules/Month_must_be_current_or_previous_month.validationRule-meta.xml
<ValidationRule>
    <fullName>Month_must_be_current_or_previous_month</fullName>
    <active>true</active>
    <description>The month selected in the picklist value must be the current or previous month.</description>
    <errorConditionFormula>OR(
         Month_Formula__c  = TEXT(MONTH(TODAY())),  
       Month_Formula__c = TEXT(MONTH(TODAY()) - 1)  
    )</errorConditionFormula>
    <errorMessage>The month must be the current or previous month in the same year.</errorMessage>
</ValidationRule>