objects/Time_Tracker__c/listViews/All_Time_Trackers.listView-meta.xml
<ListView>
    <fullName>All_Time_Trackers</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Customer_Success__c</columns>
    <columns>Presales__c</columns>
    <columns>R_D__c</columns>
    <columns>Month__c</columns>
    <columns>Support__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.FIRST_NAME</field>
        <operation>contains</operation>
        <value>Tadashi</value>
    </filters>
    <label>All Time Trackers</label>
</ListView>